--- a/www/content/index.html
+++ b/www/content/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Redirect</title>
-    <link rel="canonical" href="https://github.com/pkgw/cranko" />
+    <link rel="canonical" href="https://pkgw.github.io/" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta http-equiv="refresh" content="0;url=https://github.com/pkgw/cranko" />
+    <meta http-equiv="refresh" content="0;url=book/latest/" />
   </head>
   <body>
-    <p><a href="https://github.com/pkgw/cranko">Click here</a> to be redirected.</p>
+    <p><a href="book/latest/">Click here</a> to be redirected.</p>
   </body>
 </html>
